--- a/src/spaghetti.css
+++ b/src/spaghetti.css
@@ -5,17 +5,27 @@ code
 }
 
 body {
-	counter-reset: h2counter;
+	counter-reset: h1counter;
 }
 h1 {
 	counter-reset: h2counter;
+	font-size:14pt;
+}
+h1:before {
+	content: counter(h1counter) ".\0000a0\0000a0";
+	counter-increment: h1counter;
+	counter-reset: h2counter;
+}
+
+h2 {
+	font-size:12pt;
 }
 h2:before {
-	content: counter(h2counter) ".\0000a0\0000a0";
+	content: counter(h1counter) "." counter(h2counter) ".\0000a0\0000a0";
 	counter-increment: h2counter;
 	counter-reset: h3counter;
 }
 h3:before {
-	content: counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
+	content: counter(h1counter) "." counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
 	counter-increment: h3counter;
 }
