--- a/src/spaghetti.css
+++ b/src/spaghetti.css
@@ -2,7 +2,7 @@
 code
 {
 	color:#111;
-	background-color: #eee;
+	background-color: #eec;
 }
 
 li{
@@ -12,19 +12,22 @@ li{
 body {
 	counter-reset: h1counter;
 }
+
 h1 {
 	counter-reset: h2counter;
 	font-size:14pt;
 }
+/*
 h1:before {
 	content: counter(h1counter) ".\0000a0\0000a0";
 	counter-increment: h1counter;
 	counter-reset: h2counter;
 }
-
+*/
 h2 {
 	font-size:12pt;
 }
+/*
 h2:before {
 	content: counter(h1counter) "." counter(h2counter) ".\0000a0\0000a0";
 	counter-increment: h2counter;
@@ -34,3 +37,4 @@ h3:before {
 	content: counter(h1counter) "." counter(h2counter) "." counter(h3counter) ".\0000a0\0000a0";
 	counter-increment: h3counter;
 }
+*/
