--- a/misc/spaghetti.css
+++ b/misc/spaghetti.css
@@ -5,10 +5,10 @@ code
 	background-color: #eec;
 }
 
-li{
+/*li{
 	margin-top:.5em;
 	margin-bottom:.5em;
-}
+}*/
 body {
 	counter-reset: h1counter;
 }
